# ChangeLog for x11-plugins/pidgin-knotify
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Sep 2010; <alunduil@gentoo.org> files/security-336916.patch:
  Missing an escape for the escape slash

  13 Sep 2010; <alunduil@gentoo.org> files/security-336916.patch:
  Fixed patch file

  13 Sep 2010; <alunduil@gentoo.org> pidgin-knotify-0.2.1-r1.ebuild:
  Forgot to inherit eutils
