@@ -1,5 +1,5 @@
-AUX security-336916.patch 2354 RMD160 3e4f316e140ae39cd6eb172956559284550bad6a SHA1 e113d8d50e2e70a875561687af5b1fc634c78dfd SHA256 9b3bd9878e67d13decd79fb5aa9cdea7e64f2af6eff7942036748d40eb757671
+AUX security-336916.patch 2402 RMD160 2b23f0914dd913aaff26f326f455fad8b9bdc274 SHA1 9c9ac93e4b6aaf6273da327dcf08813d3e018869 SHA256 dd46ff0a699f641fb330eeb8400704fdf12c8ac62715fb006ed2d688f89c89df
 DIST pidgin-knotify-0.2.1.tar.gz 321476 RMD160 778b413bdb2e8dc05a3675f0f170a48382136501 SHA1 27c50a5eb3ea063ce1abb516e3244823e3b6a244 SHA256 3fd31c1a0d1b0ede697cf7fdd85b30a6160d3331f980dbf3da3f41bb0ccb559c
 EBUILD pidgin-knotify-0.2.1-r1.ebuild 730 RMD160 a150f40c408842d2ab2c02c57cd9b9581ec1bb68 SHA1 0b324d968a4c2d581c2d35ffb86f05dfcbf6a3e4 SHA256 e2c42f3f52acfc74351acd956f9570e260b0f1a5726885f305948255fd5b5ef9
-MISC ChangeLog 418 RMD160 246c2553b31ae6b586445f6e4d2045b09826f2c3 SHA1 b58b716daffad2c6bf3cf9d3162efe961522a6c2 SHA256 5ea6bb476ff26d5f772fce6daae272a84950d036eefe210a776606354e212fa9
+MISC ChangeLog 532 RMD160 e078d11b0b1acea6ccca87f623684e4e55c52441 SHA1 5da53eff818da8a7f9855baf331cd54244034daa SHA256 f83bdf2a1afc8a1252feed2d537eec04248ee3e93989cce51c7eefe2228333f9
 MISC metadata.xml 297 RMD160 dcd033d6792ff12fe189d2171e65a2e3e85757ec SHA1 4e17f752f013e23d55be5ee04dc0d9fe821e6564 SHA256 52deac29ec96a0863fb886de592500bfd2e3e91a5027a4234444a1b862df2690
